--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 problem_student/torcs/**
 problem_student/tests/**
 **/*.pklz
+
+# Vim swap files
+*.swp
+
+# Python: Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
